--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -93,3 +94,13 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_launcher_icons:
+      android: "launcher_icon"
+      ios: true
+      image_path: "lib/assets/icon/icon.png"
+      # Optional: For Android adaptive icons (Android 8.0+), specify foreground and background
+      adaptive_icon_background: "lib/assets/icon/background.png"
+      adaptive_icon_foreground: "lib/assets/icon/foreground.png"
+      # Optional: For Android themed icons (Android 13+), specify a monochrome icon
+      adaptive_icon_monochrome: "lib/assets/icon/monochrome.png"
