--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   form_field_validator: ^1.1.0
   google_fonts: ^6.1.0
   supabase_flutter: ^2.10.1
+  http: ^1.1.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
@@ -25,6 +27,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    - assets/images/
   
   fonts:
     - family: Roboto
