--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   supabase_flutter: ^2.10.1
   http: ^1.1.0
   url_launcher: ^6.2.6
+  image_picker: ^1.2.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
